# merotecflow

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/autoflow/: __init__.py  core.py  errors.py
tests/: __init__.py  test_flow.py
